--- a/public/templates/manager-settings.html
+++ b/public/templates/manager-settings.html
@@ -219,7 +219,7 @@
 	<div class="padding npb">
 		<div class="row">
 			<div class="col-md-12 m">
-				<div data-jc="textbox" data-jc-path="settings.formuser.name" data-required="true" data-placeholder="@(Peter Sirka)">@(User name)</div>
+				<div data-jc="textbox" data-jc-path="settings.formuser.name" data-required="true" data-placeholder="@(Syche)">@(User name)</div>
 			</div>
 		</div>
 		<div class="row">
