--- a/themes/default/views/layout.html
+++ b/themes/default/views/layout.html
@@ -113,7 +113,7 @@
 			</div>
 
 			<footer>
-				<div><a href="http://www.paypal.com"><img src="/img/paypal.png" alt="Payment Provider - PayPal" border="0" width="42" height="25" /></a></div>
+				<div><a href=""><img src="/img/m-pesa-logo.jpg" alt="Payment Provider - Mpesa" border="0" width="60" height="60" /></a></div>
 				<br />
 				<div class="social">
 					<a href=""><span class="fa fa-facebook"></span></a>
