--- a/views/manager-login.html
+++ b/views/manager-login.html
@@ -21,7 +21,7 @@
 	<br />
 	<div class="ui-center">
 		<i class="fa fa-lock fa-5x silver"></i>
-		<h1>@{config.name} <b>v@{config.version}</b></h1>
+		<h1> Manager Login</h1>
 	</div>
 	<br />
 	<div class="container">
