--- a/themes/default/views/layout.html
+++ b/themes/default/views/layout.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-5 m xs-center">
-					<a href="/"><h1>@(<b>Fortune Networks)</b></h1></a>
+					<img src="/img/fortunelogo.jpg" height="100px" width="300px"/>
 				</div>
 				<div class="col-sm-3 m ui-right header-padding">
 					<hr class="visible-xs" />
