--- a/themes/default/views/layout.html
+++ b/themes/default/views/layout.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-5 m xs-center">
-					<a></a><img src="/img/fortunelogo.jpg" height="100px" width="300px"/></a>
+					<a><img src="/img/fortunelogo.jpg" height="100px" width="300px"/></a>
 				</div>
 				<div class="col-sm-3 m ui-right header-padding">
 					<hr class="visible-xs" />
