--- a/themes/default/views/eshop/checkout.html
+++ b/themes/default/views/eshop/checkout.html
@@ -121,7 +121,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div data-jc="textbox" data-jc-path="form.billingcountry" data-required="true" data-maxlength="30" data-jc-value="'Slovakia'">@(Country)</div>
+						<div data-jc="textbox" data-jc-path="form.billingcountry" data-required="true" data-maxlength="30" data-jc-value="'Kenya'">@(Country)</div>
 					</div>
 				</div>
 				<br />
@@ -190,7 +190,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 m">
-							<div data-jc="textbox" data-jc-path="form.deliverycountry" data-required="true" data-maxlength="30" data-jc-value="'Slovakia'">@(Country)</div>
+							<div data-jc="textbox" data-jc-path="form.deliverycountry" data-required="true" data-maxlength="30" data-jc-value="'Kenya'">@(Country)</div>
 						</div>
 					</div>
 				</div>
