--- a/public/templates/manager-orders.html
+++ b/public/templates/manager-orders.html
@@ -152,7 +152,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="orders.form.billingcountry" data-maxlength="30" data-jc-value="'Slovakia'" data-required="true">@(Country)</div>
+				<div data-jc="textbox" data-jc-path="orders.form.billingcountry" data-maxlength="30" data-jc-value="'Kenya'" data-required="true">@(Country)</div>
 			</div>
 		</div>
 
@@ -204,7 +204,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 m">
-				<div data-jc="textbox" data-jc-path="orders.form.deliverycountry" data-maxlength="30" data-jc-value="'Slovakia'">@(Country)</div>
+				<div data-jc="textbox" data-jc-path="orders.form.deliverycountry" data-maxlength="30" data-jc-value="'Kenya'">@(Country)</div>
 			</div>
 		</div>
 	</div>
