--- a/themes/default/views/layout.html
+++ b/themes/default/views/layout.html
@@ -35,8 +35,11 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-5 m xs-center">
+				<div class="col-sm-4 m xs-center">
 					<a href="/"><img src="/img/fortunelogo.jpg" height="100px" width="300px"/></a>
+				</div>
+				<div class="col-sm-3 m">
+					<img src="/img/mpesa.jpeg" height="70px" width="200px"/>
 				</div>
 				<div class="col-sm-3 m ui-right header-padding">
 					<hr class="visible-xs" />
