--- a/themes/default/views/index.html
+++ b/themes/default/views/index.html
@@ -10,7 +10,7 @@
 <div class="padding homepage">
 	<br />
 	<div class="center">
-		<a href="" class="mr15" target="_blank">Facebook</a>
+		<a href="https://www.facebook.com/fortunenetKenya" class="mr15" target="_blank">Facebook</a>
 		<a href="" class="mr15" target="_blank">Twitter</a>
 		<a href="@{sitemap_url('contact')}" class="b" target="_blank">@(Contact)</a>
 	</div>
