--- a/themes/default/public/css/default.css
+++ b/themes/default/public/css/default.css
@@ -5,10 +5,10 @@ $font    : 'Source Sans Pro';
 .CMS_hidden { display: none; }
 
 html { background-color: #F0F0F0; }
-body { background-color: #F0F0F0; padding: 0; color: gray; font-smoothing: antialiased; overflow-y: scroll; overflow-x: hidden; overflow-scrolling: touch; }
+body { background-color: #F0F0F0; padding: 0; color: black; font-smoothing: antialiased; overflow-y: scroll; overflow-x: hidden; overflow-scrolling: touch; }
 form { padding: 0; margin: 0; }
 
-.developer { background-color: #D0D0D0; font-size: 11px; text-align: center; padding: 5px 0; display: block; color: gray; }
+.developer { background-color: #D0D0D0; font-size: 11px; text-align: center; padding: 5px 0; display: block; color: #0e0903; }
 .developer:hover { text-decoration: none; background-color: #F0F0F0; }
 
 .content { background-color: white; border-radius: 4px; }
@@ -20,7 +20,7 @@ form { padding: 0; margin: 0; }
 .header-links-container { position: relative; }
 .header-links { position: absolute; right: 0; top: 0; font-size: 11px; }
 .header-links a { margin-left: 10px; }
-.header-menu-button { display: none; float: right; font-size: 47px; color: gray; line-height: 40px; margin: 5px 0 0 0; }
+.header-menu-button { display: none; float: right; font-size: 47px; color: #0e0903; line-height: 40px; margin: 5px 0 0 0; }
 .header-menu-button:hover { text-decoration: none; }
 .header-menu-button:active { color: black; }
 
@@ -31,7 +31,7 @@ form { padding: 0; margin: 0; }
 
 .categories-toggle { display: block !important; }
 .categories { padding: 0 0 8px; }
-.categories a { display: block; line-height: 16px; padding: 8px 0; background-color: white; text-align: center; color: gray; font-size: 14px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; font-family: $font; }
+.categories a { display: block; line-height: 16px; padding: 8px 0; background-color: white; text-align: center; color: #0e0903; font-size: 14px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; font-family: $font; }
 .categories a:hover { background-color: #ea9809; color: white; text-decoration: none; }
 .categories span { margin-left: 5px; }
 .categories .selected { background-color: black !important; color: white; }
@@ -40,7 +40,7 @@ form { padding: 0; margin: 0; }
 .categories-button { margin-bottom: 18px; color: black; font-weight: bold; font-family: $font; text-transform: uppercase; }
 
 .manufacturers { text-align: center;  margin: 30px auto 0; }
-.manufacturers a { position: relative; display: inline-block; margin: 5px; background-color: white; padding: 4px 8px; border-radius: 3px; font-size: 11px; width: 110px; color: gray; border: 1px solid #E0E0E0; text-align: left; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+.manufacturers a { position: relative; display: inline-block; margin: 5px; background-color: white; padding: 4px 8px; border-radius: 3px; font-size: 11px; width: 110px; color: #0e0903; border: 1px solid #E0E0E0; text-align: left; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 .manufacturers a:hover { text-decoration: none; background-color: #4BA9F8; color: white; }
 .manufacturers .fa { margin-right: 5px; border-right: 1px solid #E0E0E0; padding-right: 5px; }
 
@@ -51,7 +51,7 @@ form { padding: 0; margin: 0; }
 .recommendation b { padding: 1px 3px; border-radius: 2px; position: relative; display: inline-block; font-size: 10px; color: white; background-color: #D63B32; vertical-align: top; margin-left: 5px; line-height: 10px; }
 
 .subcategories { padding: 0; margin-top: 10px; }
-.subcategories a { display: block; line-height: 16px; padding: 8px 0; background-color: #F0F0F0; text-align: center; color: gray; font-size: 14px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; }
+.subcategories a { display: block; line-height: 16px; padding: 8px 0; background-color: #F0F0F0; text-align: center; color: #0e0903; font-size: 14px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; }
 .subcategories a:hover { background-color: #303030; color: white; text-decoration: none; }
 .subcategories span { margin-left: 5px; }
 .subcategories .selected { background-color: black !important; color: white; }
@@ -61,7 +61,7 @@ form { padding: 0; margin: 0; }
 .breadcrumb { border-bottom: 1px solid #F0F0F0; padding: 0 25px; color: silver; display: block; height: 40px; overflow: hidden; }
 .breadcrumb ul { position: relative; display: inline-block; list-style-type: none; margin: 12px 0 0 5px; padding: 0; font-size: 12px; }
 .breadcrumb li { position: relative; display: inline-block; max-width: 150px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; vertical-align: middle; }
-.breadcrumb a { color: gray; }
+.breadcrumb a { color: #0e0903; }
 .breadcrumb li .fa { margin: 0 6px 0 10px; }
 .breadcrumb-social { float: right; margin-top: 5px; }
 .breadcrumb-social a { font-size: 20px; color: silver; width: 30px; text-align: right; position: relative; display: inline-block; }
@@ -78,7 +78,7 @@ h2 .fa { margin-right: 10px; }
 .product-picture { text-align: center; display: block; padding: 10px 0; border: 0.01px solid orange }
 .product-picture img { margin: 0 auto; }
 .product-name { text-align: center; font-size: 16px; font-family: $font; display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
-.product-category { font-size: 12px; color: gray; text-align: center; display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+.product-category { font-size: 12px; color: #0e0903; text-align: center; display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
 .product-price { margin: 10px auto; border-top: 2px solid #E0E0E0; text-align: center; font-size: 22px; font-family: $font; font-weight: 400; padding: 10px 0 10px; color: black; }
 .product-price span { font-size: 14px; color: red; text-decoration: line-through; }
 .product-top { position: absolute; right: 10%; }
@@ -90,7 +90,7 @@ h2 .fa { margin-right: 10px; }
 .flags .new { background-color: #62C8FA; }
 .flags .top { background-color: #C23540; }
 
-.detail-buy { font-size: 30px; font-weight: 200; font-family: $font; border: 1px solid silver; background-color: white; padding: 0; height: 74px; color: gray; width: 100%; border-radius: 4px; }
+.detail-buy { font-size: 30px; font-weight: 200; font-family: $font; border: 1px solid silver; background-color: white; padding: 0; height: 74px; color: #0e0903; width: 100%; border-radius: 4px; }
 .detail-buy b { font-weight: 400; }
 .detail-buy span { font-size: 22px; color: red; text-decoration: line-through; font-weight: 400; }
 .detail-buy:hover { border: 1px solid black; color: black; }
@@ -123,15 +123,15 @@ p { margin: 0; }
 
 .links > div { margin: 0; border-left: 1px solid #F0F0F0; border-top: 1px solid #E0E0E0; border-bottom: 1px solid #E0E0E0; padding: 0; }
 .links > div:first-child { border-left: 0; }
-.links a { display: block; text-align: center; padding: 20px 0; color: gray; background-color: white; font-size: 16px; font-family: $font; font-weight: 400; text-transform: uppercase; }
+.links a { display: block; text-align: center; padding: 20px 0; color: #0e0903; background-color: white; font-size: 16px; font-family: $font; font-weight: 400; text-transform: uppercase; }
 .links a:hover { text-decoration: none; background-color: #E0E0E0; }
 .links span { display: block; font-size: 12px; font-family: Arial; text-transform: none; }
 
-.footerlinks a { display: block; text-align: center; padding: 20px 0; color: gray; background-color: white; font-size: 16px; font-family: $font; font-weight: 400; text-transform: uppercase; border-radius: 4px; margin-bottom: 20px; }
+.footerlinks a { display: block; text-align: center; padding: 20px 0; color: #0e0903; background-color: white; font-size: 16px; font-family: $font; font-weight: 400; text-transform: uppercase; border-radius: 4px; margin-bottom: 20px; }
 .footerlinks a:hover { text-decoration: none; background-color: #E0E0E0; }
 .footerlinks span { display: block; font-size: 12px; font-family: Arial; text-transform: none; }
 
-footer { text-align: center; font-size: 12px; padding: 20px 0; color: gray; }
+footer { text-align: center; font-size: 12px; padding: 20px 0; color: #0e0903; }
 .social a { font-size: 20px; color: silver; width: 30px; text-align: center; position: relative; display: inline-block; }
 .social a:hover { color: black; }
 
@@ -146,7 +146,7 @@ footer { text-align: center; font-size: 12px; padding: 20px 0; color: gray; }
 
 .checkoutbutton { font-size: 25px; color: black; display: block; padding: 2px 0 4px; font-family: $font; line-height: 20px; font-weight: bold; }
 .checkoutbutton:hover { text-decoration: none; border-color: silver; color: black; }
-.checkoutbutton-label { color: gray; display: block; font-size: 12px; }
+.checkoutbutton-label { color: #0e0903; display: block; font-size: 12px; }
 .checkoutbutton-label .fa { margin-right: 5px; }
 
 .checkoutlist input { border: 0; background-color: white; text-align: center; width: 100%; outline: 0; margin: 0; font-size: 16px; border: 2px solid #E0E0E0; }
@@ -171,7 +171,7 @@ footer { text-align: center; font-size: 12px; padding: 20px 0; color: gray; }
 .orders > div:nth-child(odd) { background-color: #F8F8F8; }
 
 .social-oauth2 div { text-align: center; margin-top: 20px; }
-.social-oauth2 a { display: block; background-color: #F8F8F8; padding: 10px 0; border-radius: 4px; color: gray; }
+.social-oauth2 a { display: block; background-color: #F8F8F8; padding: 10px 0; border-radius: 4px; color: #0e0903; }
 .social-oauth2 a span { font-size: 30px; text-decoration: none; }
 .social-oauth2 b { font-size: 11px; display: block; margin: 5px 0 0 0; font-weight: normal; }
 .social-oauth2 a:hover { text-decoration: none; background-color: #36CAFD; color: white; }
@@ -199,7 +199,7 @@ footer { text-align: center; font-size: 12px; padding: 20px 0; color: gray; }
 .ui-isopen .closed { background-color: #DA4453; }
 
 .tabs { text-align: center; margin: 15px 0 40px; }
-.tabs a { position: relative; display: inline-block; background-color: white; border: 1px solid #E0E0E0; border-left: 0; padding: 5px 10px; color: gray; text-decoration: none; font-size: 11px; min-width: 100px; text-align: center; }
+.tabs a { position: relative; display: inline-block; background-color: white; border: 1px solid #E0E0E0; border-left: 0; padding: 5px 10px; color: #0e0903; text-decoration: none; font-size: 11px; min-width: 100px; text-align: center; }
 .tabs a:first-child { border-left: 1px solid #E0E0E0; border-radius: 20px 0 0 20px; }
 .tabs a:last-child { border-radius: 0 20px 20px 0; }
 .tabs .selected { background: #53B5F9 linear-gradient(#53B5F9, #48A5F8); color: white; }
