--- a/themes/default/public/css/default.css
+++ b/themes/default/public/css/default.css
@@ -31,8 +31,8 @@ form { padding: 0; margin: 0; }
 
 .categories-toggle { display: block !important; }
 .categories { padding: 0 0 8px; }
-.categories a { display: block; line-height: 16px; padding: 8px 0; background-color: white; text-align: center; color: #0e0903; font-size: 14px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; font-family: $font; }
-.categories a:hover { background-color: #ea9809; color: white; text-decoration: none; }
+.categories a { display: block; line-height: 16px; padding: 8px 0; background-color: white; text-align: center; color: #f0640a; font-size: 15px; text-transform: uppercase; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 15px; border-radius: 4px; font-family: $font; }
+.categories a:hover { background-color: #f0640a; color: white; text-decoration: none; }
 .categories span { margin-left: 5px; }
 .categories .selected { background-color: black !important; color: white; }
 .categories .fa { margin-right: 5px; }
@@ -70,7 +70,7 @@ form { padding: 0; margin: 0; }
 .padding-container { padding: 25px 0; }
 .padding { padding: 25px; }
 
-h1, h2.large { font-weight: 200; font-family: $font; margin: 5px 0 30px 0; padding: 0; color: #A4A4A4; text-align: center; font-size: 40px; }
+h1, h2.large { font-weight: 200; font-family: $font; margin: 5px 0 30px 0; padding: 0; color: #212F99; text-align: center; font-size: 40px; }
 h2 { font-size: 24px; font-family: $font; font-weight: 400; margin: 0 0 20px 0; padding: 0; color: black; }
 h2 .fa { margin-right: 10px; }
 
