--- a/themes/default/views/eshop/checkout-detail.html
+++ b/themes/default/views/eshop/checkout-detail.html
@@ -116,12 +116,12 @@
 			<br />
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 ui-center blue m">
-					@(Pay bill now via) <span class="fa fa-paypal mr5"></span><b>PayPal</b>.
-					<div class="fs11 silver">@(You will be redirect to secured PayPal payment page.)</div>
+					@(Pay bill now via) <span></span><b>Mpesa</b>.
+					<div class="fs11 silver">@(You will be redirect to secured Mpesa payment page.)</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3"><a href="?pay=1" class="linkbutton pay"><img src="/img/paypal.png" border="0" alt="PayPal" width="42" height="25" /> @(Pay Bill Now)</a></div>
+				<div class="col-md-6 col-md-offset-3"><a href="?pay=1" class="linkbutton pay"><img src="/img/m-pesa-logo.jpg" border="0" alt="PayPal" width="42" height="25" /> @(Pay Bill Now)</a></div>
 			</div>
 			<br />
 			@{fi}
